updating label drawing logic, fixing ice z-index tooltip issue

--- a/src/ToolBar/style.css
+++ b/src/ToolBar/style.css
@@ -148,5 +148,8 @@
 .veToolbarViewOptionsHolder label {
   margin: 40px 10px;
 }
-
+.ve-toolbar-item-popover {
+  /* the z-index has to be high for it to work with ice */
+  z-index: 4000;
+}
 /*# sourceMappingURL=style.css.map */
